Fixed page footer

--- a/kb.html
+++ b/kb.html
@@ -47,8 +47,8 @@ All rights reserved.
                   118 : 'showOptions($event)',
                   'ctrl-83' : 'save($event)' }">
 <style type="text/css" ng-bind-html="customStyles"></style>
-<div id='body_all'><!-- this wrapper is to allow the magic that prints just the summary -->
 <div id="wrap">
+<div id='body_all'><!-- this wrapper is to allow the magic that prints just the summary -->
 <!--***********************************************
 Nav Bar / Header
 ************************************************-->
@@ -920,8 +920,8 @@ Nav Bar / Header
     </alert>
   </div>
 
-</div>
 </div> <!-- body -->
+</div> <!-- body_all -->
 </div> <!-- wrap -->
 
 <!--***********************************************
