Fix #138:  Add a lock flag for switches

--- a/kb.html
+++ b/kb.html
@@ -540,6 +540,7 @@ Nav Bar / Header
               <kbd-multi-check field="ghost" kbd-disable="multi.decal" hint-text="Specify whether the selected keys should be rendered slightly transparently; this is useful to draw attention to the other, non-ghosted keycaps.">Ghosted</kbd-multi-check>
               <kbd-multi-check field="stepped" kbd-disable="multi.decal" hint-text="Specify whether the selected keys are 'stepped', i.e., part of the key is at a lower height than the rest.  The secondary 'width' indicates the width of the stepped part.">Stepped</kbd-multi-check>
               <kbd-multi-check field="nub" kbd-disable="multi.decal" hint-text="Specifies that the selected keys are 'homing' keys, which help the user find the home-row by touch alone.">Homing</kbd-multi-check>
+              <kbd-multi-check field="lock" kbd-disable="multi.decal" hint-text="Specifies that the selected keys are to be treated as 'locking' keys, i.e., the switch has a built-in toggle feature that will hold it in the down position on every alternate keypress.">Locking</kbd-multi-check>
               <kbd-multi-check field="decal" hint-text="Specifies that the selected keys are to be treated as 'decals', i.e., purely decorative additions to the layout.">Decal</kbd-multi-check>
             </div>
           </div>
