Updated code to work with newest Jison version
-- Jison changed their code generation slightly so that the parser is no
longer named "parser"
-- Updated the kb.html to reference the new name as appropriate
-- If you need to upgrade to a new version of Jison, run "npm upgrade -g
jison"

--- a/kb.html
+++ b/kb.html
@@ -30,9 +30,9 @@ All rights reserved.
 <script type="text/javascript" src="js/bootstrap-colorpicker-module.min.js"></script>
 <script type="text/javascript" src="js/doT.min.js"></script>
 <script type="text/javascript" src="js/urlon.js"></script>
-<script type="text/javascript" src="js/cssparser.min.js"></script><script type="text/javascript">$cssParser = parser;</script>
+<script type="text/javascript" src="js/cssparser.min.js"></script><script type="text/javascript">$cssParser = cssparser;</script>
 <script type="text/javascript" src="js/color.js"></script>
-<script type="text/javascript" src="js/jsonl.min.js"></script><script type="text/javascript">jsonl = parser;</script>
+<script type="text/javascript" src="js/jsonl.min.js"></script>
 <script type="text/javascript" src="js/html2canvas.min.js"></script>
 <script type="text/javascript" src="extensions.js"></script>
 <script type="text/javascript" src="render.js"></script>
