improve footer spacing

--- a/kb.html
+++ b/kb.html
@@ -931,11 +931,11 @@ Footer
 ************************************************-->
 <div id="footer" ng-cloak>
 <div class="container">
-  <p class="text-muted credit" style="float:left">
+  <div class="text-muted credit" style="float:left">
     Keyboard Layout Editor v{{version}} (<a href='#' ng-click="showMarkdown('CHANGELOG.md', $event)">changelog</a>)<br/>
     Copyright &copy; 2013-2015 &mdash; Ian Prest (<a href='#' ng-click="showMarkdown('CONTRIB.md', $event)">and contributors</a>)<br/>
     All rights reserved. (<a href='#' ng-click="showMarkdown('LICENSE.md', $event)">LICENSE</a>)
-  </p>
+  </div>
   <div style="float:right;">
     <a href="#" ng-click="showHelp($event)"><i class="fa fa-question-circle"></i> Help &amp; keyboard shortcuts</a><br/>
     <a href="https://github.com/ijprest/keyboard-layout-editor/issues" target="_blank"><i class="fa fa-bug"></i> Found a bug?</a><br/>
