tweak css to allow keycap border-color changes

--- a/kb.html
+++ b/kb.html
@@ -1212,13 +1212,13 @@ DOT.js Templates
 
     <div style="left: {{=parms.outercapx}}px; top: {{=parms.outercapy}}px;
                 width: {{=parms.outercapwidth}}px; height: {{=parms.outercapheight}}px;
-                border-style: solid; border-width: {{=sizes.strokeWidth}}px; border-color: black; border-radius: {{=sizes.roundOuter}}px;
+                border-width: {{=sizes.strokeWidth}}px; border-radius: {{=sizes.roundOuter}}px;
                 background-color: {{=parms.darkColor}};"
          class="keyborder"></div>
   {{? parms.jShaped}}
     <div style="left: {{=parms.outercapx2}}px; top: {{=parms.outercapy2}}px;
                 width: {{=parms.outercapwidth2}}px; height: {{=parms.outercapheight2}}px;
-                border-style: solid; border-width: {{=sizes.strokeWidth}}px; border-color: black; border-radius: {{=sizes.roundOuter}}px;
+                border-width: {{=sizes.strokeWidth}}px; border-radius: {{=sizes.roundOuter}}px;
                 background-color: {{=parms.darkColor}};"
          class="keyborder"></div>
     <div style="left: {{=parms.outercapx + sizes.strokeWidth}}px; top: {{=parms.outercapy + sizes.strokeWidth}}px;
