--- a/kb.html
+++ b/kb.html
@@ -470,7 +470,7 @@ Nav Bar / Header
                data-hint="Specify the profile and (optionally) the row-number of the selected keys, e.g., 'DCS R1', 'DSA', 'DSA SPACE', etc.
 
                Supported profiles:
-               &nbsp;&bull; SA, DSA, DCS, OEM, CHICKLET
+               &nbsp;&bull; SA, DSA, DCS, OEM, CHICKLET, FLAT
 
                Supported rows:
                &nbsp;&bull; R1, R2, R3, R4, R5, SPACE">
