--- a/oauth.html
+++ b/oauth.html
@@ -20,17 +20,17 @@ if(!window.opener) {
 var code = (window.location.href.match(/[\?\&]code=([^\&]*)/) || [null])[1];
 var state = (window.location.href.match(/[\?\&]state=([^\&]*)/) || [null])[1];
 if(code && state) {
-  var gatekeeper = 'kle-gatekeeper';
+  var url = '/authorization/'
   if(window.location.href.match(/^http:\/\/localhost\:/)) {
-    gatekeeper += "-local";
+    url = 'http://kle-gatekeeper-local.azurewebsites.net/authenticate/'
   }
-  $.getJSON('http://'+gatekeeper+'.azurewebsites.net/authenticate/'+code, function(data) {
+  $.getJSON(url + code, function(data) {
     if(data.error) {
       window.opener.__oauthError('Gatekeeper returned an error code: ' + data.error);
-    } else if(!data.token) {
+    } else if(!data.access_token) {
       window.opener.__oauthError('Gatekeeper did not return an OAuth token.');
     } else {
-      window.opener.__oauthSuccess(data.token, state);
+      window.opener.__oauthSuccess(data.access_token, state);
     }
     window.close();
   }).fail(function() {
