--- a/oauth.html
+++ b/oauth.html
@@ -24,7 +24,7 @@ if(code && state) {
   if(window.location.href.match(/^http:\/\/localhost\:/)) {
     gatekeeper += "-local";
   }
-  $.getJSON('http://'+gatekeeper+'.azurewebsites.net/authenticate/'+code, function(data) {
+  $.getJSON('https://'+gatekeeper+'.azurewebsites.net/authenticate/'+code, function(data) {
     if(data.error) {
       window.opener.__oauthError('Gatekeeper returned an error code: ' + data.error);
     } else if(!data.token) {
