tweak front label position in SVG

--- a/kb.html
+++ b/kb.html
@@ -1345,8 +1345,8 @@ DOT.js Templates
       {{?}}
       {{? i==8 }}
       </svg>
-      <svg x="{{=parms.textcapx}}" y="{{=parms.outercapy+sizes.strokeWidth*2}}" width="{{=parms.textcapwidth}}" height="{{=parms.outercapheight-sizes.strokeWidth*2}}" class='keylabels'>
-    {{?}} {{ /* i==8 */ }}
+      <svg x="{{=parms.textcapx}}" y="{{=parms.outercapy+sizes.strokeWidth*2}}" width="{{=parms.textcapwidth}}" height="{{=parms.outercapheight-sizes.strokeWidth}}" class='keylabels'>
+      {{?}} {{ /* i==8 */ }}
     {{~}}
     </svg>
     <svg x='{{=parms.textcapx}}' y='{{=parms.textcapy}}' width='{{=parms.textcapwidth}}' height='{{=parms.textcapheight}}' class='keylabels'>
